--- a/composer.json
+++ b/composer.json
@@ -8,13 +8,14 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^8.1",
+        "php": "^8.2",
         "althinect/filament-spatie-roles-permissions": "^2.2",
+        "eightynine/filament-excel-import": "^3.0",
         "filament/filament": "3.x",
-        "guzzlehttp/guzzle": "^7.2",
-        "laravel/framework": "^10.10",
-        "laravel/sanctum": "^3.3",
-        "laravel/tinker": "^2.8",
+        "guzzlehttp/guzzle": "^7.8.1",
+        "laravel/framework": "^10.42",
+        "laravel/sanctum": "^3.3.3",
+        "laravel/tinker": "^2.9",
         "livewire/livewire": "^3.4",
         "spatie/laravel-permission": "^6.3"
     },
