--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,8 @@
     "require": {
         "php": "^8.2",
         "althinect/filament-spatie-roles-permissions": "^2.2",
+        "barryvdh/laravel-dompdf": "^2.0",
+        "codeat3/blade-eos-icons": "^1.13",
         "eightynine/filament-excel-import": "^3.0",
         "filament/filament": "3.x",
         "guzzlehttp/guzzle": "^7.8.1",
