--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "codeat3/blade-eos-icons": "^1.13",
         "eightynine/filament-excel-import": "^3.0",
         "filament/filament": "3.x",
+        "filament/notifications": "^3.2",
         "guzzlehttp/guzzle": "^7.8.1",
         "laravel/framework": "^10.42",
         "laravel/sanctum": "^3.3.3",
